@@ -7,7 +7,7 @@ Author: Sacha Epskamp, Angelique O. J. Cramer, Lourens J. Waldorp, Verena D. Sch
 Maintainer: Sacha Epskamp <qgraph@sachaepskamp.com>
 Depends: R (>= 2.14.0)
 Suggests: RSVGTipsDevice, fdrtool, lavaan, sem, rpanel
-Imports:  psych, ellipse, lavaan, sem, plyr, methods, Hmisc, igraph
+Imports:  psych, ellipse, lavaan, sem, plyr, methods, Hmisc, igraph, ReadImages, png
 ByteCompile: yes
 Description:  The qgraph package can be used to visualize data as networks.
 URL: http://sachaepskamp.com/qgraph
