@@ -25,6 +25,8 @@ importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
 importFrom(ellipse,"ellipse")
 importFrom(graphics,"plot","points","lines","polygon")
+importFrom(png,"readPNG")
+importFrom(ReadImages,"read.jpeg")
 import(plyr)
 importFrom(Hmisc,"subplot")
 import(igraph)
